if(WITH_MATLAB)
  find_package(SWIGMATLAB)
endif()
find_package(SWIG REQUIRED)
include(${SWIG_USE_FILE})

include_directories(${CASADI_INCLUDE_DIR}/casadi)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
if(WITH_PYTHON)
  find_package(PythonLibs)
  find_package(NUMPY)
  include_directories(${PYTHON_INCLUDE_PATH})
  include_directories(${NUMPY_PATH})
endif()
if(WITH_MATLAB)
  find_package(MATLAB)
  include_directories(${MATLAB_INCLUDE_DIR})
endif()

set(CMAKE_SWIG_FLAGS "")

set_source_files_properties(Basis.i PROPERTIES CPLUSPLUS ON)
set_property(SOURCE Basis.i PROPERTY SWIG_FLAGS "-I${PROJECT_SOURCE_DIR}" "-I${CASADI_INCLUDE_DIR}" "-I${CASADI_INCLUDE_DIR}/casadi")

if(WITH_PYTHON)
  swig_add_module(Basis_python python Basis.i)
  swig_link_libraries(Basis_python ${PYTHON_LIBRARIES} Basis casadi)
endif()

if(WITH_MATLAB)
  swig_add_module(BasisMEX matlab Basis.i)
  swig_link_libraries(BasisMEX ${MATLAB_LIBRARIES} Basis)
  set_target_properties(BasisMEX PROPERTIES PREFIX "" SUFFIX .${MATLAB_MEX_EXT})
  add_custom_target(Basis_matlab DEPENDS BasisMEX Basis)
endif()
