if(WITH_MATLAB)
  find_package(SWIGMATLAB)
endif()
find_package(SWIG REQUIRED)
include(${SWIG_USE_FILE})

include_directories(${CASADI_INCLUDE_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
if(WITH_PYTHON)
  find_package(PythonLibs 2.7)
  find_package(NUMPY)
  include_directories(${PYTHON_INCLUDE_PATH})
  include_directories(${NUMPY_PATH})
endif()
if(WITH_MATLAB)
  find_package(MATLAB)
  include_directories(${MATLAB_INCLUDE_DIR})
endif()

set(CMAKE_SWIG_FLAGS "")

set_source_files_properties(Basis.i PROPERTIES CPLUSPLUS ON)
set_property(SOURCE Basis.i PROPERTY SWIG_FLAGS "-I${PROJECT_SOURCE_DIR}" "-I${CASADI_INCLUDE_DIR}" "-I${CASADI_INCLUDE_DIR}" "-D__STDC_UTF_16__")

set(SWIG_MODULE_Basis_EXTRA_DEPS ${CMAKE_SOURCE_DIR}/src/libBasis${CMAKE_SHARED_LIBRARY_SUFFIX})
  
if(WITH_PYTHON)
  swig_add_module(Basis python Basis.i)
  swig_link_libraries(Basis ${PYTHON_LIBRARIES} Basis ${CASADI_LIBRARIES})
endif()

if(WITH_MATLAB)
  swig_add_module(BasisMEX matlab Basis.i)
  swig_link_libraries(BasisMEX ${MATLAB_LIBRARIES} Basis ${CASADI_LIBRARIES})
  set_target_properties(BasisMEX PROPERTIES PREFIX "" SUFFIX .${MATLAB_MEX_EXT})
  add_custom_target(Basis_matlab DEPENDS BasisMEX Basis)
endif()
